Fix footer on smaller screen resolutions

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -53,11 +53,9 @@
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 20px;
-  line-height: 20px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+    width: 100%;
+    height: 20px;
+    line-height: 20px;
+    position: sticky;
+    position: -webkit-sticky;
 }
